# jcc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  TODO.md  build.bat  build.sh  iwyu.sh  run.bat  run.sh  run_tests.bat  run_tests.sh
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
libs/magic_enum/: magic_enum.hpp
pre_build/: grammar.txt
pre_build/parser_gen/: grammar_parser.cpp  grammar_parser.hpp  main.cpp  production.cpp  production.hpp
src/: Span.cpp  Span.h  main.cpp  reporting.cpp  reporting.h  tokenizer.cpp  tokenizer.h
src/codegen/: expressions.cpp  expressions.h
src/diagnostics/: diagnostics.cpp  diagnostics.h  source.cpp  source.h
src/diagnostics/variants/: char_const_empty.h  diagnostic_directive_no_tokens.cpp  diagnostic_directive_no_tokens.hpp  escape_seq_too_large.hpp  hex_escape_empty.cpp  multi_byte_char_impl_def.cpp  multi_byte_char_impl_def.hpp  sema_modulo_int.cpp  sema_modulo_int.h  sema_mult_arithmetic.cpp  sema_mult_arithmetic.h  todo.cpp  todo.hpp  unexpected_eof.cpp  unexpected_eof.hpp  untermed_char.cpp  untermed_char.h  untermed_string.cpp  utf8_too_many_chars.cpp
src/diagnostics/variants/parsing/: basic_syntax_error.cpp  basic_syntax_error.hpp  expected_expression.cpp  expected_expression.hpp  expected_rparen.cpp  expected_rparen.hpp  invalid_floating_point_literal.cpp  invalid_floating_point_literal.hpp  invalid_integer_literal.cpp  invalid_integer_literal.hpp  unrecognized_floating_suffix.cpp  unrecognized_floating_suffix.hpp  unrecognized_integer_suffix.cpp  unrecognized_integer_suffix.hpp
src/diagnostics/variants/sema/: binary_operands_wrong_types.cpp  binary_operands_wrong_types.hpp  invalid_specifier_qualifier_list.cpp  invalid_specifier_qualifier_list.hpp  modulo_with_non_int.cpp  modulo_with_non_int.hpp  mult_non_arithmetic.cpp  (+5 more)
src/ir_codegen/: ir_gen.cpp  ir_gen.h
src/misc/: CharStream.cpp  CharStream.h  CompilerDatatypes.h  Config.h  Diagnosis.cpp  Diagnosis.h  Preprocessor.cpp  Preprocessor.h  Span.cpp  Span.h  SpanOld.cpp  SpanOld.h  Tokenizer.cpp  Tokenizer.h  Trie.cpp  Trie.h  compiler_data_types.h  reporting.cpp  reporting.h  tokenizer.cpp  tokenizer.h  tokenizer_old.cpp  tokenizer_old.h  trie.h  visitor.hpp
src/misc/preprocessor/: command.cpp  command.h  define_command.cpp  macro.h  preprocessor.cpp  preprocessor.h  preprocessor_iterator.cpp  preprocessor_iterator.h  preprocessor_token.cpp  preprocessor_token.h
src/parsing/: ASTNode.cpp  ASTNode.h  AstNode.cpp  AstNode.h  Parser.cpp  Parser.h  ParserRuleBuilder.cpp  ParserRuleBuilder.h  additive_expression.cpp  additive_expression.h  ast_node.cpp  ast_node.h  binary_expression.h  bitwise_and_expression.cpp  bitwise_and_expression.hpp  bitwise_or_expression.cpp  bitwise_or_expression.hpp  bitwise_xor_expression.cpp  bitwise_xor_expression.hpp  cast_expression.cpp  cast_expression.hpp  constant.cpp  constant.h  equality_expression.cpp  equality_expression.hpp  expression.cpp  expression.h  logical_and_expression.cpp  logical_and_expression.hpp  lrtable_utils.hpp  multiplicative_expression.cpp  multiplicative_expression.h  numeric_constant.cpp  numeric_constant.h  parser.cpp  parser.h  postfix_expression.h  primary_expression.cpp  primary_expression.h  relational_expression.cpp  (+7 more)
src/parsing/Ast/: AstConstant.cpp  AstConstant.h  AstExpression.cpp  AstExpression.h  AstIdentifier.cpp  AstIdentifier.h  AstPostfixExpression.cpp  AstPostfixExpression.h  AstPrimaryExpression.cpp  AstPrimaryExpression.h  AstStringLiteral.cpp  AstStringLiteral.h
src/parsing/types/: type.cpp  type.h
src/parsing_sema/: additive_expression.cpp  additive_expression.h  ast_node.cpp  ast_node.h  binary_expression.h  cast_expression.cpp  cast_expression.hpp  constant.cpp  constant.h  expression.cpp  expression.h  integer_constant.cpp  integer_constant.h  multiplicative_expression.cpp  multiplicative_expression.h  numeric_constant.cpp  numeric_constant.h  parser.cpp  parser.h  postfix_expression.cpp  postfix_expression.h  primary_expression.cpp  primary_expression.h  sema_visitor.cpp  sema_visitor.h  shift_expression.cpp  shift_expression.h  type_name.cpp  type_name.h  types.cpp  types.h
src/parsing_sema/types/: type.cpp  type.h
src/platform/: platform.cpp  platform.h
src/preprocessor/: macro.cpp  macro.h  macro_store.cpp  macro_store.h  preprocessor.cpp  preprocessor.h  preprocessor_iterator.cpp  preprocessor_iterator.h  preprocessor_token.cpp  preprocessor_token.h
src/preprocessor/commands/: command.cpp  command.h  define_command.cpp  define_command.h  else_command.cpp  else_command.h  endif_command.cpp  endif_command.h  error_command.cpp  error_command.h  identifier_command.cpp  identifier_command.h  ifdef_command.cpp  ifdef_command.h  include_command.cpp  include_command.h  undef_command.cpp  undef_command.h  warning_command.cpp  warning_command.h
src/tokenizer/: Tokenizer.cpp  Tokenizer.h  TokenizerOld.cpp  TokenizerOld.h  char_iter.cpp  char_iter.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  tokenizer_iterator.cpp  tokenizer_iterator.h
src/tokenizer/tokens/: character_constants.cpp  character_constants.h  escape_sequences.cpp  escape_sequences.h  identifiers.cpp  identifiers.h  pp_numbers.cpp  pp_numbers.h  static_tokens.cpp  static_tokens.h  string_literals.cpp  string_literals.h  utils.cpp  utils.h
src/visitors/: expression_codegen.cpp  expression_codegen.h  expression_type_deduction.cpp  expression_type_deduction.hpp  sema.cpp  sema.h
test_files/: header-test.h  ifdef-test.c  incl-test.c  macro_sequence_for.h  memmgr.c  parser_test.c  parsing-test.txt  some-file.h  stress_test.c  test.c  test2.c  test3.c
tests/: char_iter.cpp  memmgr.c  parser.test.cpp  preprocessor.test.cpp  test.c  test.txt  tokenizer.old.test.cpp  tokenizer.test.cpp  trie.test.cpp  type.test.cpp
tests/misc/: trie.cpp
tests/preprocessor/: keywords_idents.cpp  preprocessor_tokenizing.cpp  punctuators.cpp
tests/tokenizer/: comments.cpp  int_literal.cpp  misc.cpp  span_creation.cpp  string_literals.cpp  tokens.cpp
(+219 files in other folders)
